hoping word wrap fixed ios bug for code

--- a/_sass/minima/ryan-dracula.scss
+++ b/_sass/minima/ryan-dracula.scss
@@ -225,6 +225,7 @@ code, pre {
  overflow-x: scroll !important;
  overflow-y: scroll !important;
  white-space: pre !important;
+ word-wrap: normal !important;
  -webkit-overflow-scrolling: touch !important;
 }
 
